--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,7 @@
 language: csharp
+script:
+        - dotnet restore
+        - dotnet build BookShop.sln -c Release
+        - dotnet test -c Release --no-build BookShop.Tests/BookShop.Tests.csproj /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
+ after_script:
+        - bash <(curl -s https://codecov.io/bash)
