--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,5 @@ install:
 script:
   - dotnet build
   - dotnet test BookShop.Tests/BookShop.Tests.csproj /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
+  - bash <(curl -s https://codecov.io/bash)
 
