--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,10 @@
 language: csharp
+mono: none
+dist: xenial
+dotnet: 3.1
+install:
+  - dotnet restore
+script:
+  - dotnet build
+  - dotnet test BookShop.Tests/BookShop.Tests.csproj /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
+  - bash <(curl -s https://codecov.io/bash)
